--- a/explain-android/src/main/res/values-de-v31/strings.xml
+++ b/explain-android/src/main/res/values-de-v31/strings.xml
@@ -1,5 +1,5 @@
 <resources>
 
-    <string name="explain_android_prompt_disable_app_hibernation_instructions">Öffne den App-Info Dialog und deaktiviere <b>Entferne Berechtigungen und gib Speicher frei</b></string>
+    <string name="explain_android_prompt_disable_app_hibernation_instructions">Öffne den App-Info Dialog und deaktiviere <b>\"Entferne Berechtigungen und gib Speicher frei\"</b></string>
 
 </resources>
