--- a/explain-android/src/main/res/values-v31/strings.xml
+++ b/explain-android/src/main/res/values-v31/strings.xml
@@ -1,5 +1,5 @@
 <resources>
 
-    <string name="explain_android_prompt_disable_app_hibernation_instructions">Open the App info dialog and disable <b>Remove permissions and free up space</b></string>
+    <string name="explain_android_prompt_disable_app_hibernation_instructions">Open the App info dialog and disable <b>\"Remove permissions and free up space\"</b></string>
 
 </resources>
