--- a/explain-android/src/main/res/values/strings.xml
+++ b/explain-android/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <!--
     Steps to disable app-hibernation.
     -->
-    <string name="explain_android_prompt_disable_app_hibernation_instructions">Open the Play App, navigate to <b>Menu</b> &gt; <b>Play Protect</b> &gt; <b>Permissions for Unused Apps</b> and disable <b>Remove permissions if app isn\'t used</b></string>
+    <string name="explain_android_prompt_disable_app_hibernation_instructions">Open the Play App, navigate to <b>\"Menu\"</b> &gt; <b>\"Play Protect\"</b> &gt; <b>\"Permissions for Unused Apps\"</b> and disable <b>\"Remove permissions if app isn\'t used\"</b></string>
 
     <!--
     Reasoning on why app hibernation should/must be disabled for this app.
